--- a/main.css
+++ b/main.css
@@ -24,70 +24,56 @@ html, body {
 	box-sizing: border-box; 
 }
 
-a { 
-	text-decoration: none; 
-	transition: all 0.2s linear 0s; 
-}
-
-* > a {
-	color: #FFF;
-}
-
-
 .button__container {
+  position: relative;
+  overflow: hidden;
 	width: 280px;
 	height: 80px;
 	border: 3px solid #FFF;
 	margin: auto auto;
 	cursor: pointer;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   outline: none;
   color: #FFF;
 }
 
 .button__text {
-  position: relative;
-  overflow: hidden;
-	width: 100%;
-	height: 100%;
+  position: absolute;
 	text-transform: uppercase;
 	font-weight: bold;
 	letter-spacing: 2px;
-  padding: 25px 100px;
   background: none;
+  z-index: 2;
+}
 
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
+.button__container:hover > .button__text {
+  color: #0e83cd;
+  transition: all 0.3s;
 }
 
 .button__animation {
-	position: absolute;
 	width: 300%;
 	height: 0;
   background: #fff;
   opacity: 0;
-  z-index: 11;
-
-
-  -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+  z-index: 1;
+  transform: rotate(45deg);
+  transition: all 0.3s;
 }
 
-.button__text:hover > .button__animation {
-	height: 260%;
-  top: 50%;
-  left: 50%;
+.button__container:hover > .button__animation {
+	height: 270%;
 	opacity: 1;
+  transition: all 0.3s;
+}
 
+.button__container:active > .button__animation {
+  height: 350%;
+}
 
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-    -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-    -moz-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-    -ms-transform: translateX(-50%) translateY(-50%) rotate(45deg);
-    transform: translateX(-50%) translateY(-50%) rotate(45deg);
+.button__container:focus > .button__animation {
+  height: 350%;
 }
